<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/auctionImageView"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/auctionTitleTextView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_no_cover_book" />

    <TextView
        android:id="@+id/auctionTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/allegroButton"
        app:layout_constraintStart_toStartOf="@+id/deliveryLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/allegro_price"
        app:layout_constraintStart_toStartOf="@+id/deliveryLabel"
        app:layout_constraintTop_toBottomOf="@+id/auctionTitleTextView" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="@+id/priceWithDeliveryTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/priceLabel"
        app:layout_constraintTop_toTopOf="@+id/priceLabel" />

    <TextView
        android:id="@+id/deliveryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/allegro_delivery"
        app:layout_constraintStart_toEndOf="@+id/auctionImageView"
        app:layout_constraintTop_toBottomOf="@+id/priceTextView" />

    <TextView
        android:id="@+id/priceWithDeliveryTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/allegroButton"
        app:layout_constraintStart_toEndOf="@+id/deliveryLabel"
        app:layout_constraintTop_toTopOf="@+id/deliveryLabel"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/allegroButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/allegro_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/priceLabel"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>